Adding changes required for the bxb OSP10 setup.

--- a/osp7_installer/ansible/overcloud-deploy.yml
+++ b/osp7_installer/ansible/overcloud-deploy.yml
@@ -7,18 +7,20 @@
     - osp-overcloud-post
     - add-overcloud-host
 
+#CB_DCI Turned off to run with DCI
 # add custom config to the compute nodes
-- hosts: overcloud_compute
-  connection: ssh
-  roles:
-    - sysctl-bridge-conf
+#- hosts: overcloud_compute
+#  connection: ssh
+#  roles:
+#    - sysctl-bridge-conf
 
+#CB_DCI Turned off to run with DCI
 # run tests and report
-- hosts: "{{ director_node_ssh_ip }}"
-  connection: ssh
-  roles:
-    - osp-test-data
-    - read-overcloudrc-props
-    - rh-tempest
-    - scale-patch
-    - report_status
+#- hosts: "{{ director_node_ssh_ip }}"
+#  connection: ssh
+#  roles:
+#    - osp-test-data
+#    - read-overcloudrc-props
+#    - rh-tempest
+#    - scale-patch
+#    - report_status
