--- a/osp7_installer/ansible/roles/director_setup_ansible/tasks/main.yml
+++ b/osp7_installer/ansible/roles/director_setup_ansible/tasks/main.yml
@@ -1,5 +1,26 @@
 ---
 
+- name: Test if epel rpm exists
+  shell: sudo yum repolist | grep epel
+  ignore_errors: true
+  register: exiting_epel_rpm_check
+
+- name: Install epel rpm
+  shell: >
+    cd /tmp; 
+    wget http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm;
+    sleep 30;
+    ls epel-release-latest-7.noarch.rpm;
+    sudo yum -y install epel-release-latest-7.noarch.rpm;
+    sudo yum repolist | grep epel
+  when: exiting_epel_rpm_check|failed
+    
+- name: make sure python-pip is installed
+  yum: name=python-pip state=present
+
+- name: make sure libffi is installed
+  yum: name=libffi-devel state=present
+
 - name: make sure virtualenv is installed
   yum: name=python-virtualenv state=present
 
