--- a/osp7_installer/ansible/roles/disable-lab-pxe/tasks/main.yml
+++ b/osp7_installer/ansible/roles/disable-lab-pxe/tasks/main.yml
@@ -1,10 +1,14 @@
 ---
 
+- name:  Test for Boxborough node
+  shell: hostname | grep bxb
+  ignore_errors: true
+  register: test_for_bxb
+
 - name: ifdown lab pxe interface (we already booted this machine)
-  shell: ifdown {{ undercloud_lab_pxe_interface }}
+  shell: sleep 10 && ifdown {{ undercloud_lab_pxe_interface }} && sleep 10 
+  when: test_for_bxb|failed
 
 - name: disabling lab pxe interface
   template: src=ifcfg.template dest=/etc/sysconfig/network-scripts/ifcfg-{{ undercloud_lab_pxe_interface }}
-
-
-
+  when: test_for_bxb|failed
