--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -6,9 +6,9 @@ resource_registry:
 {% else %}
   OS::TripleO::Compute::Net::SoftwareConfig: /usr/share/openstack-tripleo-heat-templates/net-config-bridge.yaml
 {% endif %}
-{% if osp_version == 8 %}
-  OS::TripleO::NodeExtraConfig: /home/stack/templates/disable-selinux.yaml
-{% endif %}
+#{% if osp_version == 8 %}
+#  OS::TripleO::NodeExtraConfig: /home/stack/templates/disable-selinux.yaml
+#{% endif %}
 
 parameter_defaults:
 
@@ -32,9 +32,6 @@ parameter_defaults:
   NetworkUCSMUsername: '{{ network_ucsm_username }}'
   NetworkUCSMPassword: '{{ network_ucsm_password }}'
   NetworkUCSMHostList: '{{ network_ucsm_host_list }}'
-{% if ucsm_support_pci_devs %}
-  NetworkUCSMSupportedPciDevs: {{ ucsm_support_pci_devs }}
-{% endif %}
   NetworkNexusConfig: {{ network_nexus_config|to_nice_json }}
 
   NetworkNexusManagedPhysicalNetwork: {{ network_nexus_managed_physical_network }}
@@ -56,12 +53,6 @@ parameter_defaults:
   NeutronNetworkType: '{{ network_type }}'
   NetworkNexusVxlanVniRanges: '{{ vni_ranges }}'
   NetworkNexusVxlanMcastRanges: '{{ mcast_ranges }}'
-
-{% if do_sriov %}
-  NovaComputeExtraConfig:
-    nova::compute::pci_passthrough: >
-      '[{"product_id":"0071", "address":"*:07:*", "vendor_id":"1137","physical_network": "{{ network_nexus_managed_physical_network }}" }]'
-{% endif %}
 
 parameters:
   Debug: "{{ overcloud_debug }}"
