--- a/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: configure boot kernals
   sudo_user: stack
-  shell: source /home/stack/stackrc && openstack baremetal configure boot
+  shell: sleep 20 && source /home/stack/stackrc && openstack baremetal configure boot
 
 - name: discover nodes
   sudo_user: stack
