--- a/osp7_installer/conf_common/bxb.conf
+++ b/osp7_installer/conf_common/bxb.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-proxy_host = proxy.esl.cisco.com
+proxy_host = proxy-wsa.esl.cisco.com
 proxy_port = 80
 proxy = http://%(proxy_host)s:%(proxy_port)s
 
@@ -7,7 +7,7 @@ overcloud_vlan = 1202
 deploy_with_flavors=true
 
 controller_separate_public_nic = False
-setup_default_route = False
+setup_default_route = True
 
 #filebeat_port =  8944
 
