--- a/osp7_installer/conf_common/osp7.conf
+++ b/osp7_installer/conf_common/osp7.conf
@@ -2,8 +2,6 @@
 osp_version = 7
 nova_default_floating_pool = nova
 
-rpms_for_image = "http://memory.cisco.com/osp7/rpms/python-networking-cisco-2015.1.0-7.el7ost.noarch.rpm"
-
 yum_repos = [
               { 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-ga/rhel-7-server-openstack-7.0-director-rpms.repo' },
               { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-ga/rhel-7-server-openstack-7.0-rpms.repo' },
@@ -29,6 +27,11 @@ patch_infos = [
                   'name': 'neutron',
                   'path': '/usr/lib/python2.7/site-packages/neutron',
                   'ref': 'refs/changes/89/249389/1',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+                  'ref': 'refs/changes/08/260708/2'
                 },
                 {
                   'name': 'neutron',
