--- a/osp7_installer/conf_common/osp8.conf
+++ b/osp7_installer/conf_common/osp8.conf
@@ -2,13 +2,13 @@
 osp_version = 8
 nova_default_floating_pool = public
 
-mirror_base_url = http://memory.cisco.com/osp/osp8/RH7-RHOS-8.0-2016-04-15.1
+mirror_base_url = http://memory.cisco.com/osp/osp8/RH7-RHOS-8.0-2016-03-29.3
 
-;rpms_for_image = "http://memory.cisco.com/osp/osp8/cisco-rpms/python-networking-cisco-2.0.0-3.el7ost.noarch.rpm"
+# OSP8 does not contain the correct lxml version (fixed in next release)
+#rpms_for_image = "http://memory.cisco.com/osp/osp8/cisco-rpms/python-networking-cisco-2.1.1-3.el7ost.noarch.rpm"
 
 yum_repos = [
-              { 'name': 'RH7-RHOS-8.0-director.repo',          'url': '%(mirror_base_url)s/rhelosp-8.0-director-puddle.repo' },
-              { 'name': 'RH7-RHOS-8.0.repo',                   'url': '%(mirror_base_url)s/rhelosp-8.0-puddle.repo' },
+              { 'name': 'dci_repo.repo',                       'url': 'http://10.86.7.220/dci_repo/dci_repo.repo' },
               { 'name': 'rhel-7-server-rpms.repo',             'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
               { 'name': 'rhel-7-server-extras-rpms.repo',      'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
             ]
@@ -20,4 +20,10 @@ disk_images = [
               ]
 
 patch_infos = [
+                {
+                  'name': 'diff_ucsm_hack',
+                  'path': '/usr/lib/python2.7/site-packages',
+                  'patchfile': 'diff_ucsm_hack.patch'
+                },
+
               ]
