--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -19,24 +19,18 @@
     - { template_file: 'refresh-images.sh' }
     - { template_file: 'ipmi_address_to_uuid.py' }
 
-- name: Download images
-  sudo_user: stack
-  environment: proxy_env
-  get_url:
-    url: "{{ item.url }}"
-    dest: /home/stack/images/{{ item.name }}
-    timeout: 120
-  with_items: "{{ disk_images }}"
-  register: images_downloaded
+- yum:
+    name: "{{ item }}"
+    state: "latest"
+  with_items:
+    - rhosp-director-images
+    - rhosp-director-images-ipa
 
 - name: Unpack images
   sudo_user: stack
-  unarchive:
-    src: /home/stack/images/{{ item.name }}
-    dest: /home/stack/images
-    copy: no
-  with_items: "{{ disk_images }}"
-  when: images_downloaded|success
+  shell: find /usr/share/rhosp-director-images/ -name '*.tar' -exec tar xf {} \;
+  args:
+    chdir: '/home/stack/images'
 
 #- name: Download RHEL Guest Image
 #  sudo_user: stack
@@ -55,7 +49,7 @@
 - name: Copy image patch files (OSP8)
   template: src={{ item.template_file }} dest=/home/stack/images/{{ item.template_file }} owner=stack group=stack mode=0755
   with_items:
-    - { template_file: 'ucsm_config_parse_fix.patch' }
+    - { template_file: 'diff_ucsm_hack.patch' }
   when: osp_version == 8
 
 #- name: Build images
@@ -68,6 +62,11 @@
 #    DIB_YUM_REPO_CONF: "/etc/yum.repos.d/RH7-RHOS-8.0.repo /etc/yum.repos.d/rhel-7-server-rpms.repo /etc/yum.repos.d/RH7-RHOS-8.0-director.repo /etc/yum.repos.d/rhel-7-server-extras-rpms.repo"
 #  shell: source /home/stack/stackrc && cd images && openstack overcloud image build --all
 ##  when: images_downloaded|success
+
+
+- name: Lets try and sleep a bit
+  sudo_user: stack
+  shell: sleep 30
 
 - name: Patch overcloud-full.qcow2
   sudo_user: stack
