--- a/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -146,20 +146,6 @@ resources:
                   name: {{ controller_external_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
-                -
-                  type: vlan
-                  vlan_id: {get_param: ExternalNetworkVlanID}
-                  addresses:
-                  -
-                    ip_netmask: {get_param: ExternalIpSubnet}
-            {% if setup_default_route %}
-
-                  routes:
-                  -
-                    ip_netmask: 0.0.0.0/0
-                    next_hop: {get_param: ExternalInterfaceDefaultRoute}
-
-            {% endif %}
             {% if controller_tenant_nic %}
 
             -
@@ -176,6 +162,21 @@ resources:
 
             {% endif %}
 
+            -
+              type: interface
+              name: nic3
+              addresses:
+                -
+                  ip_netmask: {get_param: ExternalIpSubnet}
+            {% if setup_default_route %}
+
+              routes:
+                -
+                  ip_netmask: 0.0.0.0/0
+                  next_hop: {get_param: ExternalInterfaceDefaultRoute}
+
+            {% endif %}
+ 
 outputs:
   OS::stack_id:
     description: The OsNetConfigImpl resource.
