--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -5,9 +5,6 @@ xrut_dir = /opt/ws
 type_driver =  vxlan,vlan,flat,gre
 network_type = vlan
 
-do_sriov = false
-ucsm_support_pci_devs = "['1137: 0071', '8086:10ed']"
-
 skip = False
 ignore_errors = false
 
@@ -165,35 +162,22 @@ setup_default_route = True
 
 # run all networking tests
 run_long_tempest = false
+quit_all_tests = false
 
 rhel_username = dummy_user
 rhel_password = dummy_pass
 rhel_pool = dummy_pool
 
+tempest_dir = /home/stack/cisco-tempest
 local_report_dir = ../../target/
 
 logstash_dir = /opt/logstash/
-
-# Testing part
-#
-# Repo to checkout Tempest to
-tempest_dir = /home/stack/cisco-tempest
-# Username/Password to checkout Rich's and Deepika's tests from sjc-apl-gerrit3.cisco.com
-# sjc_apl_gerrit3_user =
-# sjc_apl_gerrit3_http_password =
-#
-# Tests to execute or configure environment to execute tests if test_list_file_url is defined
-# Currently supports following keywords: vlan, vxlan, ucsm, port_security
-# test_names =
-#
-# Link to the test list which would be provided to testr with argument --load-list
-# test_list_file_url =
-#
-# Upload test results to Elastic search host
-# elasticsearch_host =
-# elasticsearch_index =
+#sjc_apl_gerrit3_user =
+#sjc_apl_gerrit3_private_key =
 
 #ha_tenant_kill_orphans = True
+elasticsearch_host = "172.29.173.236:9200"
+elasticsearch_index = "test"
 
 resume_guests_state_on_host_boot = true
 
@@ -203,9 +187,6 @@ sw_1 = ""
 sw_2 = ""
 sw_1_name = ""
 sw_2_name = ""
-switch_tempest_section = [
-    {}, {}
-    ]
 
 #example step, used for printing vars
 [example]
@@ -235,3 +216,8 @@ playbook = run_tests_by_regex.yml
 [ansible]
 playbook = osp-director.yml
 
+[ucloud]
+playbook = undercloud.yml
+
+[ocloud]
+playbook = overcloud-deploy.yml
