--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -54,8 +54,8 @@ parameter_defaults:
   NetworkNexusVxlanVniRanges: '{{ vni_ranges }}'
   NetworkNexusVxlanMcastRanges: '{{ mcast_ranges }}'
 
-parameters:
-  Debug: "{{ overcloud_debug }}"
+#parameters:
+#  Debug: "{{ overcloud_debug }}"
 #  controllerExtraConfig:
 #    neutron::server::api_workers: 0
 #    neutron::agents::metadata::metadata_workers: 0
