Skip test_cloud and run_tests_by_regex
Both are not necessary in a DCI context because tempest will be run
again.

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -202,14 +202,14 @@ playbook = overcloud-redeploy.yml
 node_discovery = False
 deploy_undercloud = False
 
-[test_cloud]
-playbook = test-cloud.yml
+#[test_cloud]
+#playbook = test-cloud.yml
 
 [update_overcloud_image]
 playbook = update_overcloud_image.yml
 
-[run_tests_by_regex]
-playbook = run_tests_by_regex.yml
+#[run_tests_by_regex]
+#playbook = run_tests_by_regex.yml
 
 [ansible]
 playbook = osp-director.yml
