--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -4,9 +4,9 @@ nova_default_floating_pool = public
 
 #CB_DCI should be RHEL 7.3  Cobbler as well
 yum_repos = [
-              { 'name': 'dci_repo.repo',                       'url': 'http://10.86.7.220/dci_repo/dci_repo.repo' },
-              { 'name': 'rhel-7-server-rpms.repo',             'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
-              { 'name': 'rhel-7-server-extras-rpms.repo',      'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
+#              { 'name': 'dci_repo.repo',                       'url': 'http://10.86.7.220/dci_repo/dci_repo.repo' },
+#              { 'name': 'rhel-7-server-rpms.repo',             'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
+#              { 'name': 'rhel-7-server-extras-rpms.repo',      'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
             ]
 
 # CB_DCI not needed for OSP10
@@ -16,8 +16,8 @@ disk_images = [
 # CB_DCI The following will not apply properly with DCI method
 patch_infos = [
                 {
-                  'name': 'nexus_connect',
-                  'path': '/usr/lib/python2.7/site-packages',
-                  'patchfile': 'nexus_connect.patch'
+#                  'name': 'nexus_connect',
+#                  'path': '/usr/lib/python2.7/site-packages',
+#                  'patchfile': 'nexus_connect.patch'
                 },
               ]
