--- a/osp7_installer/ansible/roles/rhel-register/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rhel-register/tasks/main.yml
@@ -29,5 +29,5 @@
 
 - name: Set RHEL Channels
 #  environment: proxy_env
-  shell: subscription-manager repos --enable=rhel-7-server-rpms --enable=rhel-7-server-optional-rpms --enable=rhel-7-server-extras-rpms
+  shell: subscription-manager repos --enable=rhel-7-server-rpms --enable=rhel-7-server-optional-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-beta-rpms --enable==rhel-7-server-optional-beta-rpms --enable=rhel-7-server-extras-beta-rpms
   when: ansible_distribution == 'RedHat'
