Fixing issue introduced in commit 3c7408b7b93d839aaf21ed839b6505e01bf92ad7

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -4,7 +4,7 @@ nova_default_floating_pool = public
 
 #CB_DCI should be RHEL 7.3  Cobbler as well
 yum_repos = [
-#              { 'name': 'dci_repo.repo',                       'url': 'http://10.86.7.220/dci_repo/dci_repo.repo' },
+              { 'name': 'dci_repo.repo',                       'url': 'http://10.86.7.220/dci_repo/dci_repo.repo' },
 #              { 'name': 'rhel-7-server-rpms.repo',             'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
 #              { 'name': 'rhel-7-server-extras-rpms.repo',      'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
             ]
