Temorariy removing neutron-flat-networks and neutron-public-interface overcloud deploy options from deploy_overcloud.sh. Added new heat-tripleo-template variables to networking-cisco-environment.yaml.

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -46,6 +46,8 @@ parameter_defaults:
 
   NeutronTypeDrivers: '{{ type_driver }}'
   NeutronNetworkType: '{{ network_type }}'
+  NeutronFlatNetworks: '{{ neutron_flat_networks }}'
+  NeutronPublicInterface: '{{ controller_external_nic }}'
   NetworkNexusVxlanVniRanges: '{{ vni_ranges }}'
   NetworkNexusVxlanMcastRanges: '{{ mcast_ranges }}'
 
