Adding information to dynamically pull in patch for bug  #1733401.

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -15,9 +15,10 @@ disk_images = [
 
 # CB_DCI The following will not apply properly with DCI method
 patch_infos = [
-#                {
-#                  'name': 'nexus_connect',
-#                  'path': '/usr/lib/python2.7/site-packages',
-#                  'patchfile': 'nexus_connect.patch'
-#                },
+                {
+                  'name': 'puppet-neutron',
+                  'path': '/usr/share/openstack-puppet/modules/neutron',
+                  'patchfile': 'puppet-neutron.patch',
+                  'ref': 'refs/changes/32/521632/4',
+                },
               ]
