Fixed patch related infor in osp10.conf

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -17,7 +17,7 @@ disk_images = [
 patch_infos = [
                 {
                   'name': 'puppet-neutron',
-                  'path': '/usr/share/openstack-puppet/modules/neutron/manifests/plugins/ml2/cisco/nexus_creds.pp',
+                  'path': '/usr/share/openstack-puppet/modules/neutron/manifests/plugins/ml2/cisco/',
                   'patchfile': 'puppet-neutron.patch',
                   'ref': 'refs/changes/32/521632/4',
                 },
