Adding patch for nexus duplicate DB entry issue fixed in https://review.openstack.org/#/c/524338/

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -21,4 +21,10 @@ patch_infos = [
                   'patchfile': 'puppet-neutron.patch',
                   'ref': 'refs/changes/32/521632/10',
                 },
+                {
+                  'name': 'nexus-plugin',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
+                  'patchfile': 'nexus-plugin.patch',
+                  'ref': 'refs/changes/38/524338/1',
+                },
               ]
