Correcting the patch info in osp10.conf for https://review.openstack.org/#/c/524338/

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -22,9 +22,9 @@ patch_infos = [
                   'ref': 'refs/changes/32/521632/10',
                 },
                 {
-                  'name': 'nexus-plugin',
+                  'name': 'networking-cisco',
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
-                  'patchfile': 'nexus-plugin.patch',
+                  'patchfile': 'networking-cisco.patch',
                   'ref': 'refs/changes/38/524338/1',
                 },
               ]
