Updated osp10.conf to match implementation in https://review.openstack.org/#/c/524338/3

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -25,6 +25,18 @@ patch_infos = [
                   'name': 'networking-cisco',
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
                   'patchfile': 'networking-cisco.patch',
-                  'ref': 'refs/changes/38/524338/1',
+                  'ref': 'refs/changes/38/524338/3',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/db/migration/alembic_migrations/versions/',
+                  'patchfile': 'networking-cisco.patch',
+                  'ref': 'refs/changes/38/524338/3',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/db/migration/alembic_migrations/versions/mitaka/expand/',
+                  'patchfile': 'networking-cisco.patch',
+                  'ref': 'refs/changes/38/524338/3',
                 },
               ]
