--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -18,7 +18,32 @@ patch_infos = [
                 {
                   'name': 'puppet-neutron',
                   'path': '/usr/share/openstack-puppet/modules/neutron/manifests/plugins/ml2/cisco/',
-                  'patchfile': 'puppet-neutron.patch',
-                  'ref': 'refs/changes/32/521632/10',
+                  'patchfile': 'puppet-partial.patch',
+                },
+                {
+                  'name': 'tripleo-heat-templates',
+                  'patchfile': 'tripleo-heat-templates.patch',
+                  'ref': 'refs/changes/08/527508/3',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/db/migration/alembic_migrations/versions',
+                  'patchfile': 'nw-cisco-dbdupl-p1.patch',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/db/migration/alembic_migrations/versions/mitaka/expand',
+                  'patchfile': 'nw-cisco-dbdupl-p2.patch',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
+                  'patchfile': 'nw-cisco-dbdupl-p3.patch',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/services/trunk',
+                  'patchfile': 'nw-cisco.patch',
+                  'ref': 'refs/changes/45/491245/4',
                 },
               ]
