--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -2,48 +2,32 @@
 osp_version = 10 
 nova_default_floating_pool = public
 
-#CB_DCI should be RHEL 7.3  Cobbler as well
 yum_repos = [
               { 'name': 'dci_repo.repo',                       'url': 'http://10.86.7.220/dci_repo/dci_repo.repo' },
-#              { 'name': 'rhel-7-server-rpms.repo',             'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
-#              { 'name': 'rhel-7-server-extras-rpms.repo',      'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
             ]
 
-# CB_DCI not needed for OSP10
+
 disk_images = [
               ]
 
-# CB_DCI The following will not apply properly with DCI method
+# BELOW is a nexus fix which didn't make it into OSP10 with nw-cisco Release 5.5.0
+# nw-cisco-534411-DbDupl-MultiC-Brief.patch contains:
+# https://review.openstack.org/534411  without documentation
 patch_infos = [
-                {
-                  'name': 'puppet-neutron',
-                  'path': '/usr/share/openstack-puppet/modules/neutron/manifests/plugins/ml2/cisco/',
-                  'patchfile': 'puppet-partial.patch',
-                },
-                {
-                  'name': 'tripleo-heat-templates',
-                  'patchfile': 'tripleo-heat-templates.patch',
-                  'ref': 'refs/changes/08/527508/3',
-                },
-                {
-                  'name': 'networking-cisco',
-                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/db/migration/alembic_migrations/versions',
-                  'patchfile': 'nw-cisco-dbdupl-p1.patch',
-                },
-                {
-                  'name': 'networking-cisco',
-                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/db/migration/alembic_migrations/versions/mitaka/expand',
-                  'patchfile': 'nw-cisco-dbdupl-p2.patch',
-                },
                 {
                   'name': 'networking-cisco',
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
-                  'patchfile': 'nw-cisco-dbdupl-p3.patch',
-                },
-                {
-                  'name': 'networking-cisco',
-                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/services/trunk',
-                  'patchfile': 'nw-cisco.patch',
-                  'ref': 'refs/changes/45/491245/4',
+                  'patchfile': 'nw-cisco-534411-DbDupl-MultiC-Brief.patch',
                 },
               ]
+# BELOW have nexus vars and didn't make it into OSP10 with nw-cisco Release 5.5.0
+#                {
+#                  'name': 'puppet-neutron',
+#                  'path': '/usr/share/openstack-puppet/modules/neutron/manifests/plugins/ml2/cisco/',
+#                  'patchfile': 'puppet-partial.patch',
+#                },
+#                {
+#                  'name': 'tripleo-heat-templates',
+#                  'patchfile': 'tripleo-heat-templates.patch',
+#                  'ref': 'refs/changes/08/527508/3',
+#                },
