--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -4,6 +4,7 @@ mcast_ranges = 0.0.0.0:0.0.0.0
 xrut_dir = /opt/ws
 type_driver =  vxlan,vlan,flat,gre
 network_type = vlan
+tunnel_type = vlan
 
 skip = False
 ignore_errors = false
