--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -68,6 +68,7 @@ network_ucsm_ip = 127.0.0.1
 network_ucsm_username = admin
 network_ucsm_password = password
 network_ucsm_host_list = mac1:profile1, mac2:profile2
+network_ucsm_https_verify = False
 network_nexus_config = {}
 network_nexus_managed_physical_network = datacentre
 network_nexus_vlan_name_prefix = q-
