--- a/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-image/tasks/main.yml
@@ -47,6 +47,8 @@
   template: src={{ item.template_file }} dest=/home/stack/images/{{ item.template_file }} owner=stack group=stack mode=0755
   with_items:
     - { template_file: 'nw-cisco-534411-DbDupl-MultiC-Brief.patch' }
+    - { template_file: 'nw-cisco-542877-diff_trunk.patch' }
+    - { template_file: 'diff_nexus_fix.patch' }
   when: osp_version == 10
 
 - name: Copy tools files
