--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -19,6 +19,16 @@ patch_infos = [
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
                   'patchfile': 'nw-cisco-534411-DbDupl-MultiC-Brief.patch',
                 },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/plugins/ml2/drivers/cisco/nexus',
+                  'patchfile': 'diff_nexus_fix.patch',
+                },
+                {
+                  'name': 'networking-cisco',
+                  'path': '/usr/lib/python2.7/site-packages/networking_cisco/services/trunk',
+                  'patchfile': 'nw-cisco-542877-diff_trunk.patch',
+                },
               ]
 # BELOW have nexus vars and didn't make it into OSP10 with nw-cisco Release 5.5.0
 #                {
