Adding the change back in after dci agent issue was fixed.

--- a/osp7_installer/conf_common/osp10.conf
+++ b/osp7_installer/conf_common/osp10.conf
@@ -29,6 +29,12 @@ patch_infos = [
                   'path': '/usr/lib/python2.7/site-packages/networking_cisco/services/trunk',
                   'patchfile': 'nw-cisco-542877-diff_trunk.patch',
                 },
+                {
+                  'name': 'puppet-neutron',
+                  'path': '/usr/share/openstack-puppet/modules/neutron/manifests/plugins/ml2/cisco/',
+                  'patchfile': 'puppet-neutron.patch',
+                  'ref': 'refs/changes/21/537421/2',
+                },
               ]
 # BELOW have nexus vars and didn't make it into OSP10 with nw-cisco Release 5.5.0
 #                {
