--- a/osp7_installer/ansible/roles/osp-director/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-director/tasks/main.yml
@@ -88,6 +88,18 @@
     name: openstack-tripleo-heat-templates
     state: present
 
+- name: Install openstack-puppet-neutron rpm
+  yum:
+    name: openstack-puppet-neutron
+    state: present
+
+- name: Applying https://review.openstack.org/#/c/537421/
+  shell: |
+    set -o pipefail
+    curl 'https://review.openstack.org/changes/537421/revisions/6a0f77224c3a26d393fbca341f3ee873071bd773/patch?download' | base64 -d | patch -p2
+  args:
+    chdir: /usr/share/openstack-puppet-neutron
+
 - name: Create Stack user
   # password=password
   user: name=stack groups=wheel append=yes password=$6$rounds=100000$AZq2DbEdgByHTu8s$J20qsZT3AcxDB47N.Qoscv6aI91pIsI7pH.yPfMXwDOhgOdf7bqVqoPqexA9mKJuC.kXArdth67Q7AbN8416g.
